// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KModal hides the title when using hideTitle prop 1`] = `
<div aria-label="You can't see me" role="dialog" aria-modal="true" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <!---->
      <div class="k-modal-content modal-content">
        <!---->
        <!---->
        <div class="k-modal-body modal-body content-centered"></div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded outline">
            <!---->
            Cancel
            <!----></button>
          <div class="k-modal-action-buttons"><button type="button" class="k-button medium rounded primary">
              <!---->
              Submit
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal matches snapshot 1`] = `undefined`;

exports[`KModal renders custom button text & appearance 1`] = `
<div aria-label="Test Me" role="dialog" aria-modal="true" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <!---->
      <div class="k-modal-content modal-content">
        <!---->
        <div role="heading" aria-level="2" class="k-modal-header modal-header header-centered mb-5">Test Me</div>
        <div class="k-modal-body modal-body content-centered"></div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded danger">
            <!---->
            click to cancel
            <!----></button>
          <div class="k-modal-action-buttons"><button type="button" class="k-button medium rounded outline">
              <!---->
              click to continue
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using action-buttons slot 1`] = `
<div aria-label="Test Me" role="dialog" aria-modal="true" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <!---->
      <div class="k-modal-content modal-content">
        <!---->
        <div role="heading" aria-level="2" class="k-modal-header modal-header header-centered mb-5">Test Me</div>
        <div class="k-modal-body modal-body content-centered"></div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded outline">
            <!---->
            Cancel
            <!----></button>
          <div class="k-modal-action-buttons">
            <div>This is some action buttons text</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using props 1`] = `
<div aria-label="Sweet prop title" role="dialog" aria-modal="true" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <!---->
      <div class="k-modal-content modal-content">
        <!---->
        <div role="heading" aria-level="2" class="k-modal-header modal-header header-centered mb-5">Sweet prop title</div>
        <div class="k-modal-body modal-body content-centered">Sweet prop content</div>
        <div class="k-modal-footer modal-footer d-flex"><button type="button" class="k-button medium rounded outline">
            <!---->
            Cancel
            <!----></button>
          <div class="k-modal-action-buttons"><button type="button" class="k-button medium rounded primary">
              <!---->
              Submit
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using slots 1`] = `
<div aria-label="This is some header text" role="dialog" aria-modal="true" class="k-modal">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <!---->
      <div class="k-modal-content modal-content">
        <!---->
        <div role="heading" aria-level="2" class="k-modal-header modal-header header-centered mb-5">
          <div>This is some header text</div>
        </div>
        <div class="k-modal-body modal-body content-centered">
          <div>This is some body text</div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div>This is some footer text</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
